# BettaAura

./: .gitignore  CONTRIBUTING.md  LICENSE  PKG-INFO  README.md  pyproject.toml
.github/workflows/: ci.yml
aura/: __init__.py  cli.py  consolidate.py  doctor.py  extractor.py  mcp_server.py  onboard.py  pack.py  scan_cache.py  scanner.py  schema.py  schema_export.py  setup.py  version_check.py
aura/exporters/: claude_code.py  cursorrules.py  system_prompt.py
aura/importers/: __init__.py  chatgpt.py
aura_ctx-0.3.3/: context-pack.schema.json  pyproject.toml
aura_ctx-0.3.3/aura/: __init__.py  audit.py  cli.py  diff.py  doctor.py  freshness.py  mcp_server.py  onboard.py  pack.py  permissions.py  setup.py  usage.py  watcher.py
aura_ctx-0.3.3/aura/exporters/: __init__.py  chatgpt_instructions.py  claude_memory.py
aura_ctx-0.3.3/aura/importers/: claude.py
aura_ctx-0.3.3/examples/: work.yaml  writer.yaml
aura_ctx-0.3.3/tests/: test_core.py  test_validation.py
docs/: CNAME  index.html
examples/: developer.yaml  work.yaml
tests/: test_auto_context.py  test_core.py  test_mcp_prompts.py  test_permissions.py  test_priority.py  test_schema_export.py  test_usage.py  test_v030.py
